--- a/gemspec.yml
+++ b/gemspec.yml
@@ -14,6 +14,4 @@ dependencies:
   rprogram: ~> 0.2
 
 development_dependencies:
-  rubygems-tasks: ~> 0.1
-  rspec: ~> 2.0
-  yard: ~> 0.7
+  bundler: ~> 2.0
