--- a/gemspec.yml
+++ b/gemspec.yml
@@ -7,6 +7,12 @@ email: postmodern.mod3@gmail.com
 homepage: http://github.com/sophsec/ruby-nikto
 has_yard: true
 
+metadata:
+  documentation_uri: https://rubydoc.info/gems/ruby-nikto
+  source_code_uri:   https://github.com/postmodern/ruby-nikto
+  bug_tracker_uri:   https://github.com/postmodern/ruby-nikto/issues
+  changelog_uri:     https://github.com/postmodern/ruby-nikto/blob/master/ChangeLog.md
+
 requirements: nikto >= 2.1.0
 
 dependencies:
